fix: #650 Profile card misalignment

--- a/client/src/containers/App/style.scss
+++ b/client/src/containers/App/style.scss
@@ -734,6 +734,10 @@ table{
   padding:0 8px ;
 }
 
+.ant-tag:last-child {
+  margin-right: 0px;
+}
+
 //ICON
 .customIcon{
   display: flex;
